[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/UI/ThemeMAIN.tres" type="Theme" id=1]
[ext_resource path="res://Resources/Art/Props/Gold.png" type="Texture" id=2]
[ext_resource path="res://Resources/UI/PopUps/Scripts/PriceSetPopUp.gd" type="Script" id=3]

[node name="PriceSetPopUp" type="WindowDialog"]
margin_right = 232.0
margin_bottom = 136.0
theme = ExtResource( 1 )
window_title = "Sell the Slime"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlimePrice" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 176.0
margin_bottom = 72.0
text = "10"
max_length = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 36.0
text = "Insert price:"

[node name="AcceptButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 88.0
margin_right = 94.0
margin_bottom = 118.0
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="."]
margin_left = 144.0
margin_top = 88.0
margin_right = 218.0
margin_bottom = 118.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 200, 56 )
scale = Vector2( 3.36111, 3.36111 )
texture = ExtResource( 2 )

[connection signal="pressed" from="AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
